--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main>
     </main>
-    <script src="sketch.js"></script>
+    <script src="js/sketch.js"></script>
   </body>
 </html>
