--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <meta charset="utf-8" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>100% Inhuman Badge Generator</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+  <h1>100% Inhuman Badge Generator</h1>
+  <p>Click repeatedly to generate badge designs. Press 's' to save ones you like</p>
+  
+  <div id="canvas-container"></div>
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="js/sketch.js"></script>
+  <script src="js/sketch.js"></script>
+  
   </body>
 </html>
+  
